[metadata]
name = minicli
version = 0.5.3
description = Minimalist CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyrates/minicli
keywords = cli command line interface
license = WTFPL
author = Pyrates
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest==7.1.2
doc =
    mkdocs==1.1.2
